[gd_scene load_steps=8 format=2]

[ext_resource path="res://Images/Menu.png" type="Texture" id=1]
[ext_resource path="res://Audio/NoteDefender_Menu.ogg" type="AudioStream" id=2]
[ext_resource path="res://Scripts/Main_Menu.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 159.5, 43 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 159.5, 44 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 160, 43.5 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 161, 44 )

[node name="Main_Menu" type="Node2D"]
position = Vector2( -1, -1 )
script = ExtResource( 3 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 510.001, 301.5 )
scale = Vector2( 0.807811, 0.837501 )
texture = ExtResource( 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
autoplay = true

[node name="Play_Button" type="Area2D" parent="."]
position = Vector2( 849, 91 )
__meta__ = {
"_edit_group_": true
}

[node name="Play_Button_Shape" type="CollisionShape2D" parent="Play_Button"]
position = Vector2( 4.5, -3 )
shape = SubResource( 1 )

[node name="Story_Button" type="Area2D" parent="."]
position = Vector2( 841, 173 )
__meta__ = {
"_edit_group_": true
}

[node name="Story_Button_Shape" type="CollisionShape2D" parent="Story_Button"]
position = Vector2( 12.5, 5 )
shape = SubResource( 2 )

[node name="How_To_Button" type="Area2D" parent="."]
position = Vector2( 825, 266 )
__meta__ = {
"_edit_group_": true
}

[node name="How_To_Button_Shape" type="CollisionShape2D" parent="How_To_Button"]
position = Vector2( 30, 3.5 )
shape = SubResource( 3 )

[node name="Exit_Button" type="Area2D" parent="."]
position = Vector2( 828, 355 )
__meta__ = {
"_edit_group_": true
}

[node name="Exit_Button_Shape" type="CollisionShape2D" parent="Exit_Button"]
position = Vector2( 27, 6 )
shape = SubResource( 4 )

[connection signal="input_event" from="Play_Button" to="." method="_on_Play_Button_input_event"]
[connection signal="input_event" from="Story_Button" to="." method="_on_Story_Button_input_event"]
[connection signal="input_event" from="How_To_Button" to="." method="_on_How_To_Button_input_event"]
[connection signal="input_event" from="Exit_Button" to="." method="_on_Exit_Button_input_event"]
